--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         <h1>Hi my name is Daniel</h1>
         <p>I like long walks on the beach</p>
-        <link href=".about.html">
+        <A HREF = "about.html">About Me</A>
         <ul>
             <li>
                 Test 1
