--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1>Hi my name is Daniel</h1>
         <p>I like long walks on the beach</p>
         <A HREF = "about.html">About Me</A>
+        
+        <div class="bullets">
         <ul>
             <li>
                 Test 1
@@ -30,6 +32,7 @@
                 Test 5
             </li>
         </ul>
+    </div>
     </div>
 </body>
 </html>
