--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Daniel Duffy Portfolio</title>
-    <style>
-        
-    </style>
 </head>
 <body style="background-image: url(./images/wavy-dots.png);">
 
@@ -32,33 +29,41 @@
             </div>
     </nav>
 
-    <main role="main" class="container" style="background-color: white; border: 10em, gray; margin-top: 2em;">
+    <main role="main" class="container" style="background-color: white; border: 10em, gray; margin-top: 2em; padding: 1em;">
             <div class="row" style="margin:1em 0 1em 0;">
               <div class="col-md-12" style=" font-size:2em; color: #4aaaa5; font-family:'Georgia', Times, 'Times New Roman', serif;">
-                About Me
+                Contact Me
               </div>
             </div>
-            <div class="row">
-              <div class="col-12 col-md-4">
-                  <img src="./images/profile.jpg" style="max-width:15em;max-height:10em; margin-left:25%;">
-              </div>
-              <div class="col 12 col-md-8">
-                    <p>Hi everyone! My name is Daniel Duffy. I am currently residing in Denver, CO by way of Dallas, TX. Dallas was where I was born and raised, and I lived there up until I moved to Austin, TX to attend the University of Texas at Austin. There I received a B.A. in Economics, a certificate in European studies, and a minor in Latin. After school, I worked in customer service and project management at a mortgage company. After moving to Denver, I received a Scrum Product Owner certification, left my previous job, and took a product owner position at Sling TV.</p>
-              </div>
-              <div class="col-md-12" style=margin-top:1em;>
-                <p>In my free time, I enjoy playing classical guitar, which I recently got back into after about a 15 year hiatus. I take lessons weekly and practice every day. I play tennis and enjoy maintaining an active lifestyle. Fortunately, that is not too difficult here in Colorado. I have two one-year-old dogs to help in that regard as well. We like to go on hikes, to dog parks, and camping trips whenever time allows.</p>
-                <p>Time, however, has now become a valuable resource now that this course has started. Despite that, I am excited to learn the skills offered in the course. I am eager to build up my knowledge of different languages in frameworks and have opportunities to practice and improve these skills in a professional setting. </p>
-            </div>
+                <p>Name</p>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                    </div>
+                    <input type="text" class="form-control" placeholder="Ex: John Doe" aria-label="Username" aria-describedby="basic-addon1">
+                </div>
+                <p>Email</p>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                    </div>
+                    <input type="text" class="form-control" placeholder="Ex: johndoe@example.com" aria-label="Username" aria-describedby="basic-addon1">
+                </div>
+                <p>Message</p>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                    </div>
+                    <textarea class="form-control" aria-label="With textarea"></textarea>
+                  </div>
+
         </main>
 
-        <footer class="fixed-bottom" style="background-color: gray; border-top: 1em, green; text-align: center;">
-            <div class="container">
-                <div class="row" style="color: white; font-size: 1em; text-align: center;">
-                    <div class="col-md-4"></div>
-                    <div class="col-">Copyright @ Daniel Duffy</div>
-                </div>
+    <footer class="fixed-bottom" style="background-color: gray; border-top: 1em, green; text-align: center;">
+        <div class="container">
+            <div class="row" style="color: white; font-size: 1em; text-align: center;">
+                <div class="col-md-4"></div>
+                <div class="col-">Copyright @ Daniel Duffy</div>
             </div>
-        </footer>
+        </div>
+    </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
