update portfolio link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </div>
               <div class="col-md-12" style=margin-top:1em;>
                 <p>In my free time, I enjoy playing classical guitar, which I recently got back into after about a 15 year hiatus. I take lessons weekly and practice every day. I play tennis and enjoy maintaining an active lifestyle. Fortunately, that is not too difficult here in Colorado. I have two one-year-old dogs to help in that regard as well. We like to go on hikes, to dog parks, and camping trips whenever time allows.</p>
-                <p>Time, however, has now become a valuable resource now that this course has started. Despite that, I am excited to learn the skills offered in the course. I am eager to build up my knowledge of different languages in frameworks and have opportunities to practice and improve these skills in a professional setting. </p>
+                <p>Time, however, has now become a valuable resource now that I have enrolled in an immersive coding bootcamp at the University of Denver. Despite that, I am excited to learn the skills offered in the course. I am eager to build up my knowledge of different languages and frameworks, and have opportunities to practice and improve these skills in a professional setting. </p>
             </div>
         </main>
 
