--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,11 @@
             <div class="row">
                 <div class="col-md-5 offset-md-1" style="margin-bottom:1em;">
                         <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="./images/beach.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="./images/OregonTrail.PNG" alt="Word Guess Game">
                                 <div class="card-body">
-                                  <h5 class="card-title">Project 1</h5>
+                                  <h5 class="card-title">Oregon Trail Word Guess</h5>
                                   
-                                  <a href="#" class="btn btn-primary">Take a look!</a>
+                                  <a href="https://dpd1208.github.io/Word-Guess-Game/" target = "_blank" class="btn btn-primary">Take a look!</a>
                                 </div>
                         </div>
                 </div>
