update portfolio with RPG game

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,11 +45,11 @@
                 </div>
                 <div class="col-md-5" style="margin-bottom:1em;">
                         <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="./images/brazil.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="./images/Greek Mythology RPG.PNG" alt="Card image cap">
                                 <div class="card-body">
                                   <h5 class="card-title">Project 2</h5>
                                   
-                                  <a href="#" class="btn btn-primary">Take a look!</a>
+                                  <a href="https://dpd1208.github.io/unit-4-game/" target = "_blank" class="btn btn-primary">Take a look!</a>
                                 </div>
                         </div>
                 </div>
