update project name in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                         <div class="card" style="width: 18rem;">
                                 <img class="card-img-top" src="./images/Greek Mythology RPG.PNG" alt="Card image cap">
                                 <div class="card-body">
-                                  <h5 class="card-title">Project 2</h5>
+                                  <h5 class="card-title">Greek Mythology RPG Game</h5>
                                   
                                   <a href="https://dpd1208.github.io/unit-4-game/" target = "_blank" class="btn btn-primary">Take a look!</a>
                                 </div>
