update portfolio with trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-md-5" style="margin-bottom:1em;">
                         <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="./images/Greek Mythology RPG.PNG" alt="Card image cap">
+                                <img class="card-img-top" src="./images/Greek Mythology RPG.PNG" alt="RPG Game">
                                 <div class="card-body">
                                   <h5 class="card-title">Greek Mythology RPG Game</h5>
                                   
@@ -57,11 +57,11 @@
             <div class="row">
                 <div class="col-md-5 offset-md-1" style="margin-bottom:1em;">
                         <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="./images/dog.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="./images/Trivia.PNG" alt="Trivia Game">
                                 <div class="card-body">
-                                  <h5 class="card-title">Project 3</h5>
+                                  <h5 class="card-title">Parks and Recreation Trivia</h5>
                                   
-                                  <a href="#" class="btn btn-primary">Take a look!</a>
+                                  <a href="https://dpd1208.github.io/TriviaGame/" target = "_blank" class="btn btn-primary">Take a look!</a>
                                 </div>
                         </div>
                 </div>
