update portfolio with gif search

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,11 +67,11 @@
                 </div>
                 <div class="col-md-5" style="margin-bottom:1em;">
                         <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="./images/food.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="./images/Gif Search.PNG" alt="GIF Search">
                                 <div class="card-body">
-                                  <h5 class="card-title">Project 4</h5>
+                                  <h5 class="card-title">GifTastic GIF Search</h5>
                                 
-                                  <a href="#" class="btn btn-primary">Take a look!</a>
+                                  <a href="https://dpd1208.github.io/GifTastic/" class="btn btn-primary">Take a look!</a>
                                 </div>
                         </div>
                 </div>
