--- a/portfolio.html
+++ b/portfolio.html
@@ -79,11 +79,11 @@
             <div class="row">
                 <div class="col-md-5 offset-md-1" style="margin-bottom:1em;">
                         <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="./images/goose.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="./images/Train.PNG" alt="Train Scheduler">
                                 <div class="card-body">
-                                  <h5 class="card-title">Project 5</h5>
+                                  <h5 class="card-title">Train Scheduler</h5>
                                   
-                                  <a href="#" class="btn btn-primary">Take a look!</a>
+                                  <a href="https://dpd1208.github.io/Train-Scheduler/" class="btn btn-primary">Take a look!</a>
                                 </div>
                         </div>
                 </div>
