--- a/index.html
+++ b/index.html
@@ -1,67 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="reset/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <title>Daniel Duffy Portfolio</title>
-    <style>
-        
-    </style>
 </head>
-<body style="background-image: url(./images/wavy-dots.png);">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:#cccccc; padding: 0 10% 0 10%;">
-        <a class="navbar-brand" style="background-color:#4aaaa5; margin:.3em; padding:.25em;" href="#">Daniel Duffy</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                </ul>
-            </div>
-    </nav>
+<body>
 
-    <main role="main" class="container" style="background-color: white; border: 10em, gray; margin-top: 2em;">
+    <!--Visible Content Container-->
+    <div class="container-fluid background">
+
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+                <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mx-auto order-0">
+                    <a class="navbar-brand mx-auto" href="index.html">Daniel Duffy</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            
+                            <a class="nav-link" href="https://www.linkedin.com/in/dduffy89/" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/dpd1208" target="_blank"><i class="fab fa-github-square"></i>Github</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+        <main role="main" class="container main">
             <div class="row" style="margin:1em 0 1em 0;">
-              <div class="col-md-12" style=" font-size:2em; color: #4aaaa5; font-family:'Georgia', Times, 'Times New Roman', serif;">
-                About Me
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-12 col-md-4">
-                  <img src="./images/profile.jpg" style="max-width:15em;max-height:10em; margin-left:25%;">
-              </div>
-              <div class="col 12 col-md-8">
-                    <p>Hi everyone! My name is Daniel Duffy. I am currently residing in Denver, CO by way of Dallas, TX. Dallas was where I was born and raised, and I lived there up until I moved to Austin, TX to attend the University of Texas at Austin. There I received a B.A. in Economics, a certificate in European studies, and a minor in Latin. After school, I worked in customer service and project management at a mortgage company. After moving to Denver, I received a Scrum Product Owner certification, left my previous job, and took a product owner position at Sling TV.</p>
-              </div>
-              <div class="col-md-12" style=margin-top:1em;>
-                <p>In my free time, I enjoy playing classical guitar, which I recently got back into after about a 15 year hiatus. I take lessons weekly and practice every day. I play tennis and enjoy maintaining an active lifestyle. Fortunately, that is not too difficult here in Colorado. I have two one-year-old dogs to help in that regard as well. We like to go on hikes, to dog parks, and camping trips whenever time allows.</p>
-                <p>Time, however, has now become a valuable resource now that I have enrolled in an immersive coding bootcamp at the University of Denver. Despite that, I am excited to learn the skills offered in the course. I am eager to build up my knowledge of different languages and frameworks, and have opportunities to practice and improve these skills in a professional setting. </p>
-            </div>
-        </main>
-
-        <footer class="fixed-bottom" style="background-color: gray; border-top: 1em, green; text-align: center;">
-            <div class="container">
-                <div class="row" style="color: white; font-size: 1em; text-align: center;">
-                    <div class="col-md-4"></div>
-                    <div class="col-">Copyright @ Daniel Duffy</div>
+                <div class="col-md-12 section">
+                    About Me
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12 col-md-3">
+                    <img class="profile" src="assets/images/profile.PNG">
+                </div>
+                <div class="col-md-8 paragraph1" style="font-family: 'Josefin Sans', sans-serif;">
+                    <p>Hi everyone! My name is Daniel Duffy. I am currently residing in Denver, CO by way of Dallas,
+                        TX.
+                        Dallas was where I was born and raised, and I lived there up until I moved to Austin, TX to
+                        attend
+                        the University of Texas at Austin. There I received a B.A. in Economics, a certificate in
+                        European
+                        studies, and a minor in Latin.</p>
+                    <p>After school, I worked in customer service and project
+                        management at
+                        a mortgage company. After moving to Denver, I received a Scrum Product Owner certification,
+                        left my
+                        previous job, and took a product owner position at Sling TV.</p>
+                </div>
+                <div class="col-md-12 paragraph2" style="margin-top:1em; font-family: 'Josefin Sans', sans-serif;">
+                    <p>In my free time, I enjoy playing classical guitar, which I recently got back into after about a
+                        15
+                        year hiatus. I take lessons weekly and practice every day. I play tennis and enjoy maintaining
+                        an
+                        active lifestyle. Fortunately, that is not too difficult here in Colorado. I have two
+                        one-year-old
+                        dogs to help in that regard as well. We like to go on hikes, to dog parks, and camping trips
+                        whenever time allows.</p>
+                    <p>Time, however, has now become a valuable resource now that I have enrolled in an immersive
+                        coding
+                        bootcamp at the University of Denver. Despite that, I am excited to learn the skills offered in
+                        the
+                        course. I am eager to build up my knowledge of different languages and frameworks, and have
+                        opportunities to practice and improve these skills in a professional setting. </p>
+                </div>
+        </main>
+    </div>
+    <footer class="fixed-bottom" >
+                    <div class= "footer">Copyright @ Daniel Duffy</div>
         </footer>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
