--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,9 @@
                                         <li class="nav-item">
                                             <a class="nav-link" href="https://github.com/dpd1208" target="_blank"><i class="fab fa-github-square"></i>Github</a>
                                         </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" href="assets/Resume Daniel Duffy.pdf" target="_blank"><i class="fas fa-file-pdf"></i>Resume</a>
+                                        </li>
                                     </ul>
                                 </div>
                             </nav>
