--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
                                                 </div>
                                         </div>
                                 </div>
-                                <div class="col-md-5" style="margin-bottom:1em;">
+                                <div class="col-md-5 offset-md-1" style="margin-bottom:1em;">
                                         <div class="card">
                                                 <img class="card-img-top" src="assets/images/node_CLI_bamazon.PNG" alt="Card image cap">
                                                 <div class="card-body">
