--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
                                                         <h5 class="card-title">Project 6</h5>
 
                                                         <a href="https://dpd1208.github.io/bamazon/" target="_blank" class="btn btn-primary">Take a look!</a>
-                                                        <a class = "proj-link" href="https://github.com/dpd1208bamazon/" target="_blank">Github Repo</a>
+                                                        <a class = "proj-link" href="https://github.com/dpd1208/bamazon/" target="_blank">Github Repo</a>
                                                 </div>
                                         </div>
                                 </div>
