--- a/portfolio.html
+++ b/portfolio.html
@@ -144,10 +144,21 @@
                                         <div class="card">
                                                 <img class="card-img-top" src="assets/images/node_CLI_bamazon.PNG" alt="Card image cap">
                                                 <div class="card-body">
-                                                        <h5 class="card-title">Project 6</h5>
+                                                        <h5 class="card-title">Bamazon</h5>
 
                                                         <a href="https://dpd1208.github.io/bamazon/" target="_blank" class="btn btn-primary">Take a look!</a>
                                                         <a class = "proj-link" href="https://github.com/dpd1208/bamazon/" target="_blank">Github Repo</a>
+                                                </div>
+                                        </div>
+                                </div>
+                                <div class="col-md-5" style="margin-bottom:1em;">
+                                        <div class="card">
+                                                <img class="card-img-top" src="assets/images/FriendFinder.PNG" alt="Card image cap">
+                                                <div class="card-body">
+                                                        <h5 class="card-title">FriendFinder</h5>
+
+                                                        <a href="https://peaceful-mountain-92317.herokuapp.com/" target="_blank" class="btn btn-primary">Take a look!</a>
+                                                        <a class = "proj-link" href="https://github.com/dpd1208/FriendFinder/" target="_blank">Github Repo</a>
                                                 </div>
                                         </div>
                                 </div>
