--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="reset/style.css">
+        <link rel="stylesheet" href="assets/reset.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
                 integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/style.css">
         <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+                crossorigin="anonymous">
         <title>Daniel Duffy Portfolio</title>
 </head>
 
@@ -21,40 +22,43 @@
 
                 <!--Navbar-->
                 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-                                <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-                                    <ul class="navbar-nav mr-auto">
+                        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+                                <ul class="navbar-nav mr-auto">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="index.html">About</a>
+                                                <a class="nav-link" href="index.html">About</a>
                                         </li>
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                                <a class="nav-link" href="portfolio.html">Portfolio</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="contact.html">Contact</a>
+                                                <a class="nav-link" href="contact.html">Contact</a>
                                         </li>
-                                    </ul>
-                                </div>
-                                <div class="mx-auto order-0">
-                                    <a class="navbar-brand mx-auto" href="index.html">Daniel Duffy</a>
-                                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                                </ul>
+                        </div>
+                        <div class="mx-auto order-0">
+                                <a class="navbar-brand mx-auto" href="index.html">Daniel Duffy</a>
+                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                                         <span class="navbar-toggler-icon"></span>
-                                    </button>
-                                </div>
-                                <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-                                    <ul class="navbar-nav ml-auto">
+                                </button>
+                        </div>
+                        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+                                <ul class="navbar-nav ml-auto">
                                         <li class="nav-item">
-                                            
-                                            <a class="nav-link" href="https://www.linkedin.com/in/dduffy89/" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a>
+
+                                                <a class="nav-link" href="https://www.linkedin.com/in/dduffy89/" target="_blank"><i
+                                                                class="fab fa-linkedin"></i>LinkedIn</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="https://github.com/dpd1208" target="_blank"><i class="fab fa-github-square"></i>Github</a>
+                                                <a class="nav-link" href="https://github.com/dpd1208" target="_blank"><i
+                                                                class="fab fa-github-square"></i>Github</a>
                                         </li>
                                         <li class="nav-item">
-                                                <a class="nav-link" href="assets/Resume Daniel Duffy.pdf" target="_blank"><i class="fas fa-file-pdf"></i>Resume</a>
+                                                <a class="nav-link" href="assets/Resume Daniel Duffy.pdf" target="_blank"><i
+                                                                class="fas fa-file-pdf"></i>Resume</a>
                                         </li>
-                                    </ul>
-                                </div>
-                            </nav>
+                                </ul>
+                        </div>
+                </nav>
 
 
                 <main role="main" class="container main">
@@ -66,53 +70,70 @@
                         <div class="row">
                                 <div class="col-md-5 offset-md-1" style="margin-bottom:1em;">
                                         <div class="card">
-                                                <img class="card-img-top" src="assets/images/OregonTrail.PNG" alt="Word Guess Game">
+                                                <img class="card-img-top" src="assets/images/BeerKan.PNG" alt="BeerKan">
                                                 <div class="card-body">
-                                                        <h5 class="card-title">Oregon Trail Word Guess</h5>
-
-                                                        <a href="https://dpd1208.github.io/Word-Guess-Game/" target="_blank"
+                                                        <p class="card-text">BeerKan</p>
+                                                        <p class="card-text">A digital brew-log to help you organize
+                                                                and track
+                                                                your beer from start to finish.</p>
+                                                        <a href="https://cryptic-fjord-74772.herokuapp.com/" target="_blank"
                                                                 class="btn btn-primary">Take a look!</a>
-                                                        <a class = "proj-link" href="https://github.com/dpd1208/Word-Guess-Game" target="_blank">Github Repo</a>
+                                                        <a class="proj-link" href="https://github.com/dpd1208/brewIQ"
+                                                                target="_blank">Github
+                                                                Repo</a>
                                                 </div>
                                         </div>
                                 </div>
                                 <div class="col-md-5" style="margin-bottom:1em;">
                                         <div class="card">
-                                                <img class="card-img-top" src="assets/images/Greek Mythology RPG.PNG"
-                                                        alt="RPG Game">
+                                                <img class="card-img-top" src="assets/images/camping.PNG" alt="Camp with Confidence">
                                                 <div class="card-body">
-                                                        <h5 class="card-title">Greek Mythology RPG Game</h5>
-
-                                                        <a href="https://dpd1208.github.io/unit-4-game/" target="_blank"
-                                                                class="btn btn-primary">Take a look!</a>
-                                                                <a class = "proj-link" href="https://github.com/dpd1208/unit-4-game/" target="_blank">Github Repo</a>
-                                                        </div>
+                                                        <p class="card-text" style="text-emphasis: strong;">Camp
+                                                                with
+                                                                Confidence</p>
+                                                        <p class="card-text">Browse national parks and get
+                                                                equipment
+                                                                recommendations.</p>
+                                                        <a href="https://dpd1208.github.io/Team-7/" target="_blank"
+                                                                class="btn btn-primary">Take
+                                                                a look!</a>
+                                                        <a class="proj-link" href="https://github.com/dpd1208/Team-7/"
+                                                                target="_blank">Github Repo</a>
+                                                </div>
                                         </div>
                                 </div>
                         </div>
                         <div class="row">
                                 <div class="col-md-5 offset-md-1" style="margin-bottom:1em;">
                                         <div class="card">
-                                                <img class="card-img-top" src="assets/images/Trivia.PNG" alt="Trivia Game">
+                                                <img class="card-img-top" src="assets/images/Burger.PNG" alt="Eat-Da-Burger">
                                                 <div class="card-body">
-                                                        <h5 class="card-title">Parks and Recreation Trivia</h5>
-
-                                                        <a href="https://dpd1208.github.io/TriviaGame/" target="_blank"
-                                                                class="btn btn-primary">Take a look!</a>
-                                                                <a class = "proj-link" href="https://github.com/dpd1208/TriviaGame" target="_blank">Github Repo</a>
-                                                        </div>
+                                                        <p class="card-text">Eat-Da-Burger</p>
+                                                        <p class="card-text">Basic example of a custom ORM.</p>
+                                                        <a href="https://blooming-depths-89928.herokuapp.com/" target="_blank"
+                                                                class="btn btn-primary">Take
+                                                                a look!</a>
+                                                        <a class="proj-link" href="https://github.com/dpd1208/Eat-Da-Burger"
+                                                                target="_blank">Github
+                                                                Repo</a>
+                                                </div>
                                         </div>
                                 </div>
                                 <div class="col-md-5" style="margin-bottom:1em;">
                                         <div class="card">
-                                                <img class="card-img-top" src="assets/images/Gif Search.PNG" alt="GIF Search">
+                                                <img class="card-img-top" src="assets/images/FriendFinder.PNG" alt="FriendFinder">
                                                 <div class="card-body">
-                                                        <h5 class="card-title">GifTastic GIF Search</h5>
-
-                                                        <a href="https://dpd1208.github.io/GifTastic/" target="_blank" class="btn btn-primary">Take
+                                                        <p class="card-text" style="text-emphasis: strong;">FriendFinder</p>
+                                                        <p class="card-text">Answer a survey. Get matched with
+                                                                a new
+                                                                friend.</p>
+                                                        <a href="https://peaceful-mountain-92317.herokuapp.com/" target="_blank"
+                                                                class="btn btn-primary">Take
                                                                 a look!</a>
-                                                                <a class = "proj-link" href="https://github.com/dpd1208/GifTastic/" target="_blank">Github Repo</a>
-                                                        </div>
+                                                        <a class="proj-link" href="https://github.com/dpd1208/FriendFinder/"
+                                                                target="_blank">Github
+                                                                Repo</a>
+                                                </div>
                                         </div>
                                 </div>
                         </div>
@@ -121,59 +142,21 @@
                                         <div class="card">
                                                 <img class="card-img-top" src="assets/images/Train.PNG" alt="Train Scheduler">
                                                 <div class="card-body">
-                                                        <h5 class="card-title">Train Scheduler</h5>
-
-                                                        <a href="https://dpd1208.github.io/Train-Scheduler/" target="_blank" class="btn btn-primary">Take
+                                                        <p class="card-text">Train Scheduler</p>
+                                                        <p class="card-text">Enter train's initial departure and frequency to calculate its schedule.</p>
+                                                        <a href="https://dpd1208.github.io/Train-Scheduler/" target="_blank"
+                                                                class="btn btn-primary">Take
                                                                 a look!</a>
-                                                                <a class = "proj-link" href="https://github.com/dpd1208/Train-Scheduler/" target="_blank">Github Repo</a>
+                                                        <a class="proj-link" href="https://github.com/dpd1208/Train-Scheduler/"
+                                                                target="_blank">Github
+                                                                Repo</a>
                                                 </div>
-                                        </div>
-                                </div>
-                                <div class="col-md-5" style="margin-bottom:1em;">
-                                        <div class="card">
-                                                <img class="card-img-top" src="assets/images/camping.PNG" alt="Card image cap">
-                                                <div class="card-body">
-                                                        <h5 class="card-title">Project 6</h5>
-
-                                                        <a href="https://dpd1208.github.io/Team-7/" target="_blank" class="btn btn-primary">Take a look!</a>
-                                                        <a class = "proj-link" href="https://github.com/dpd1208/Team-7/" target="_blank">Github Repo</a>
-                                                </div>
-                                        </div>
-                                </div>
-                                <div class="col-md-5 offset-md-1" style="margin-bottom:1em;">
-                                        <div class="card">
-                                                <img class="card-img-top" src="assets/images/node_CLI_bamazon.PNG" alt="Card image cap">
-                                                <div class="card-body">
-                                                        <h5 class="card-title">Bamazon</h5>
-
-                                                        <a href="https://dpd1208.github.io/bamazon/" target="_blank" class="btn btn-primary">Take a look!</a>
-                                                        <a class = "proj-link" href="https://github.com/dpd1208/bamazon/" target="_blank">Github Repo</a>
-                                                </div>
-                                        </div>
-                                </div>
-                                <div class="col-md-5" style="margin-bottom:1em;">
-                                        <div class="card">
-                                                <img class="card-img-top" src="assets/images/FriendFinder.PNG" alt="Card image cap">
-                                                <div class="card-body">
-                                                        <h5 class="card-title">FriendFinder</h5>
-
-                                                        <a href="https://peaceful-mountain-92317.herokuapp.com/" target="_blank" class="btn btn-primary">Take a look!</a>
-                                                        <a class = "proj-link" href="https://github.com/dpd1208/FriendFinder/" target="_blank">Github Repo</a>
-                                                </div>
-                                        </div>
-                                </div>
-                                <div class="col-md-5 offset-md-1" style="margin-bottom:1em;">
-                                <div class="card">
-                                        <img class="card-img-top" src="assets/images/Burger.PNG" alt="Card image cap">
-                                        <div class="card-body">
-                                                <h5 class="card-title">Eat-Da-Burger</h5>
-
-                                                <a href="https://blooming-depths-89928.herokuapp.com/" target="_blank" class="btn btn-primary">Take a look!</a>
-                                                <a class = "proj-link" href="https://github.com/dpd1208/Eat-Da-Burger" target="_blank">Github Repo</a>
                                         </div>
                                 </div>
                         </div>
+
                 </main>
+
         </div>
 
         <footer class="fixed-bottom">
