update with Homework 12

--- a/portfolio.html
+++ b/portfolio.html
@@ -154,6 +154,22 @@
                                         </div>
                                 </div>
                         </div>
+                        <div class="col-md-5" style="margin-bottom:1em;">
+                                <div class="card">
+                                        <img class="card-img-top" src="assets/images/news.PNG" alt="NewsScraper">
+                                        <div class="card-body">
+                                                <p class="card-text" style="text-emphasis: strong;">NewsScraper</p>
+                                                <p class="card-text">Scrape the web for current news information.</p>
+                                                <a href="https://fast-sierra-66506.herokuapp.com/" target="_blank"
+                                                        class="btn btn-primary">Take
+                                                        a look!</a>
+                                                <a class="proj-link" href="https://github.com/dpd1208/practice/"
+                                                        target="_blank">Github
+                                                        Repo</a>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
 
                 </main>
 
